stop double scroll on mobile

--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -51,7 +51,7 @@ button {
   flex-direction: column;
   align-items: center;
 
-  overflow: scroll;
+  overflow: hidden;
   background: url(../imgs/noise.png), radial-gradient(50% 50% at 50% 50%, #161616 0%, #111111 100%);
   background-blend-mode: screen, normal;
 
